# verva-translator

./: .gitattributes  .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: architecture.md  introduction.md  modularization.md  rewrite-plan.md
src/: AppShell.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  settings.json
src-tauri/src/: history.rs  lib.rs  main.rs  models.rs  security.rs  state.rs  tray.rs
src-tauri/src/commands/: diagnostics.rs  history.rs  mod.rs  secrets.rs  translation.rs  updates.rs  window_state.rs  windows.rs
src-tauri/src/providers/: claude.rs  mock.rs  mod.rs  openai.rs  prompt.rs  sse.rs
src-tauri/windows/: hooks.nsh
src/components/: ClosePromptDialog.tsx  CustomStyleDialog.tsx  EditorPane.tsx  ErrorBoundary.tsx  HistoryDialog.tsx  LanguageBar.tsx  LanguageSelect.tsx  MainHeader.tsx  ProfileEditor.tsx  ProfileList.tsx  SettingsSections.tsx  ShortcutRecorder.tsx  Sidebar.tsx  StylePicker.tsx  TranslatePanes.tsx  UpdateDialog.tsx  WindowTitleBar.tsx
src/domain/: catalogs.test.ts  catalogs.ts  types.ts
src/hooks/: useActionFeedback.ts  useAppSettings.ts  useShortcuts.ts  useSyncedScroll.test.ts  useSyncedScroll.ts  useTranslation.ts  useUiState.ts  useWorkspace.ts
src/i18n/: I18nContext.tsx  languages.test.ts  languages.ts  messages.test.ts  messages.ts
src/pages/: HistoryPage.tsx  MainPage.tsx  SettingsPage.tsx
src/services/: backend.ts  runtime.ts  (+4 more)
(+9 files in other folders)
