[package]
name = "verva-translator"
version = "0.1.0-beta.2"
description = "A bring-your-own-AI translator for Windows"
authors = ["Trilives"]
edition = "2021"

[lib]
name = "verva_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2.3.1"
tauri-plugin-updater = "2"
chrono = { version = "0.4", features = ["serde"] }
blake2 = "0.10"
dashmap = "6"
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }

[profile.dev.package.scrypt]
opt-level = 3
